--------
v2.0-git
--------

[mjr] Fix issue causing uploads to fail in certain cases on IE.
[mjr] Display localized date strings when grouping galleries by date (Bug
      #10669).
[mjr] Improve gallery property editing when jpg image format is configured.
[jan] Add Slovak translation (Martin Matuška <martin@matuska.org>).
[mjr] Allow filtering listTagInfo results by user.
[mjr] Fix issue with style migration when upgrading from Ansel 1.x.


--------
v2.0-RC1
--------

[mjr] Fix migrations to not rely on Ansel being available.
[mjr] Fix hook calls (Bug #10659).
[mjr] Add script to convert from sql to sqlng shares after migrations have
      already run.
[mjr] Add migration to ensure style hashes are computed for migrated galleries.
[mjr] Fix uploading large files (Bug #10641).
[mjr] Fix thumbnail generation on bulk caption setting page (Bug #10642).
[mjr] Fix GROUP BY fields when searching for similar faces (Bug #10635).
[jan] Fix link to report faces (Bug #10636).


-----------
v2.0-ALPHA1
-----------

[mjr] Support for sending twitter notifications after uploading images.
[mjr] Refactor Geotagging features to use HordeMap.
[jan] Add Latvian translation (Jānis Eisaks <jancs@dv.lv>).
[jan] Provide default configuration files instead of .dist versions.
[mjr] Mobile view added.
[mjr] Square image and smart square image generators added.
[mjr] Gallery style properties are now directly editable per-gallery by the
      gallery owner (Request #6003).
[mjr] New ajax image uploader added.
[mjr] Categories are removed and migrated to tags.
[mjr] Move tag handling to Content_Tagger.
[mjr] Unsharpmask filtering options added.
[mjr] Support for multipage images (Request #6022).
[mjr] Remove support for no longer available openCV extension.
[mjr] Exif code removed and placed in Horde_Image_Exif.


------
v1.1.2
------

[mjr] Fix issue where subgalleries would become invisible in certain conditions.
[mjr] Fix parsing gps data in certain locales (Bug #9180).