@@ -34,6 +34,7 @@
  </stability>
  <license uri="http://www.horde.org/licenses/gpl">GPL-2.0</license>
  <notes>
+* [jan] Fix initialization of editor for creating ecards (Bug #10675).
 * [mjr] Fix issue causing uploads to fail in certain cases on IE.
 * [mjr] Display localized date strings when grouping galleries by date (Bug #10669).
 * [mjr] Improve gallery property editing when jpg image format is configured.
@@ -1195,6 +1196,7 @@
    <date>2011-10-19</date>
    <license uri="http://www.horde.org/licenses/gpl">GPL-2.0</license>
    <notes>
+* [jan] Fix initialization of editor for creating ecards (Bug #10675).
 * [mjr] Fix issue causing uploads to fail in certain cases on IE.
 * [mjr] Display localized date strings when grouping galleries by date (Bug #10669).
 * [mjr] Improve gallery property editing when jpg image format is configured.
