@@ -2,6 +2,7 @@
 v2.0-git
 --------
 
+[jan] Fix initialization of editor for creating ecards (Bug #10675).
 [mjr] Fix issue causing uploads to fail in certain cases on IE.
 [mjr] Display localized date strings when grouping galleries by date (Bug
       #10669).
